[package]
name = "cc-converter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
slint = { version = "1.0", features = [ "backend-qt", ] }
rfd = "0.11.3"
lib-cc-converter = { path = "crates/lib-cc-converter" }
phf = { version = "0.11.1", features = ["macros"] }

[build-dependencies]
slint-build = "1.0"
